# pdf-data-extraction

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .tool-versions  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_FRICTION.md  Taskfile.yml  harness.html  pnpm-lock.yaml
apps/backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_create_widget_table.py
apps/backend/app/: main.py
apps/backend/app/api/: access_log_middleware.py  deps.py  errors.py  health_router.py  middleware.py  probe_cache.py  request_id_middleware.py  upload_size_limit_middleware.py
apps/backend/app/api/schemas/: __init__.py  not_ready_response.py  ready_response.py
apps/backend/app/core/: benchmark_settings.py  config.py  database.py  docling_modes.py  filtered_dotenv_source.py  log_redaction_filter.py  logging.py
apps/backend/app/exceptions/: __init__.py  base.py
apps/backend/app/exceptions/_generated/: __init__.py  _registry.py  conflict_error.py  extraction_budget_exceeded_error.py  extraction_budget_exceeded_params.py  extraction_overloaded_error.py  extraction_overloaded_params.py  intelligence_timeout_error.py  intelligence_timeout_params.py  intelligence_unavailable_error.py  internal_error.py  not_found_error.py  pdf_invalid_error.py  pdf_no_text_extractable_error.py  pdf_parser_unavailable_error.py  pdf_parser_unavailable_params.py  pdf_password_protected_error.py  pdf_too_large_error.py  pdf_too_large_params.py  pdf_too_many_pages_error.py  pdf_too_many_pages_params.py  rate_limited_error.py  rate_limited_params.py  skill_not_found_error.py  skill_not_found_params.py  skill_validation_failed_error.py  skill_validation_failed_params.py  structured_output_failed_error.py  validation_failed_error.py  validation_failed_params.py  widget_name_conflict_error.py  widget_name_conflict_params.py  widget_name_too_long_error.py  widget_name_too_long_params.py  widget_not_found_error.py  widget_not_found_params.py
apps/backend/app/features/extraction/: __init__.py  deps.py  extraction_result.py  router.py  service.py
apps/backend/app/features/widget/: model.py  repository.py  router.py  service.py
apps/backend/app/harness/: __init__.py  paths.py  router.py  schemas.py  service.py
apps/backend/app/schemas/: __init__.py  error_body.py  error_detail.py  error_response.py  page.py
apps/backend/app/shared/: __init__.py  base_model.py  base_repository.py  base_service.py
apps/backend/app/types/: currency.py  money.py
apps/backend/architecture/: import-linter-contracts.ini
apps/backend/fixtures/bench/: README.md
apps/backend/scripts/: __init__.py  _benchmark_settings.py  _stream_aware_argument_parser.py  benchmark.py  validate_skills.py
apps/backend/tests/: _paths.py  conftest.py
apps/backend/tests/_support/: __init__.py  extraction_fixtures.py  skill_factory.py
apps/backend/tests/contract/: _helpers.py  conftest.py  test_degraded_contract.py  test_extract_contract.py  test_hypothesis_profile_registered.py  test_schemathesis.py
apps/backend/tests/integration/: conftest.py  test_correction_prompt_builder_override.py  test_degraded_startup.py  test_health.py  test_intelligence_error_contract.py  test_lifespan_service_cache.py  test_request_logging_redaction.py  test_rollback_canary.py  test_settings_dependency_propagation.py  test_skill_error_contract.py  test_skill_manifest_startup.py  test_taskfile_skills_validate.py
apps/backend/tests/integration/architecture/: test_import_linter_live.py
apps/backend/tests/integration/scripts/: test_benchmark.py  test_benchmark_pyright_strict.py
apps/backend/tests/integration/shared/: dummy_model.py  test_base_repository.py  test_base_service.py
apps/backend/tests/unit/: test_main_lifespan_cleanup.py
apps/backend/tests/unit/api/: test_access_log_middleware.py  test_deps.py  test_deps_concurrency.py  test_health_router.py  test_middleware.py  test_probe_cache.py  test_probe_cache_prime.py  test_request_id_middleware.py  test_upload_size_limit_middleware.py
apps/backend/tests/unit/architecture/: _linter_subprocess.py  test_ci_workflow_hygiene.py  test_compose_dev_healthcheck.py  test_conftest_import_cost.py  test_contract_enforcement.py  test_copy_app_tree_cached.py  test_dependabot_config_hygiene.py  test_dependabot_workflow_hygiene.py  test_deploy_workflow_hygiene.py  test_dockerfile_hygiene.py  test_dynamic_import_containment.py  test_errors_module_private_logger.py  test_historical_docs_banner.py  test_import_linter_contracts.py  test_lifespan_cleanup_ast.py  test_lockfile_no_cuda.py  test_logging_getlogger_containment.py  test_shared_package_docstring.py  test_taskfile_check_hygiene.py
apps/backend/tests/unit/core/: test_benchmark_settings.py  test_config.py  test_env_example_parity.py  test_log_redaction_filter.py  test_logging.py  test_settings_extra_forbid.py
apps/backend/tests/unit/docker/: test_dockerfile_copy_order.py  test_dockerfile_healthcheck_exec_form.py  test_dockerignore_at_repo_root.py
apps/backend/tests/unit/exceptions/: test_domain_errors.py  test_error_body_round_trip.py  test_error_contract_shape.py  test_error_handler.py
apps/backend/tests/unit/features/: __init__.py
apps/backend/tests/unit/meta/: test_ai_guide_not_stale.py  test_changelog_exists.py  test_ci_concurrency_groups.py  test_codeowners_exists.py  test_contract_schema_fixture_cleanup.py  test_coverage_wired.py  test_dockerfile_apt_intentional_floating.py  test_fakeprobe_exhaustion_propagates_through_probecache.py  test_fakeprobe_exhaustion_raises_assertion_error.py  test_gitattributes_no_stale_packages.py  test_hypothesis_profile_selection.py  test_no_redundant_asyncio_decorators.py  test_paths_helper.py  test_precommit_lint_hooks.py  test_precommit_pyright_hook_present.py  test_precommit_ruff_pin_matches_lockfile.py  test_support_extraction_fixtures.py  test_taskfile_hygiene.py  test_tests_unit_packages_have_init_py.py  test_with_timeout_wrapper.py
(+299 files in other folders)
