[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pdf-data-extraction"
version = "0.1.0"
description = "Backend API for the project template"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    # Docling pulls a heavy ML runtime (torch, torchvision, transformers, and
    # associated platform wheels). This is intentional: document parsing and
    # OCR are core to the service. Deployments cannot assume a slim or
    # CPU-only dependency set — plan image size and cold-start budgets
    # accordingly.
    "docling>=2.88.0,<3.0.0",
    "langextract>=1.2.1,<2.0.0",
    "pymupdf>=1.27.2.2,<2.0.0",
]

[project.entry-points."langextract.providers"]
ollama_gemma = "app.features.extraction.intelligence.ollama_gemma_provider:OllamaGemmaProvider"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "ruff>=0.15.10",
    "import-linter>=2.11",
    "pyright>=1.1.408",
    "schemathesis>=4.15.1",
    "types-pyyaml>=6.0.12",
    "types-jsonschema>=4.26.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — docs not enforced at module level
    "ANN401",  # Any in **kwargs — needed for generic base classes
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # single-line implicit string concat — conflicts with formatter
    "FIX002",  # line contains TODO
    "TD003",   # missing issue link for TODO
    "UP046",   # Generic[T] syntax — TypeVar approach is clearer for complex generics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S603",    # subprocess calls with controlled argv are safe in tests
    "ANN",     # type annotations relaxed in tests
    "PLR2004", # magic values allowed in tests
    "PLC0415", # imports inside functions allowed in test fixtures
    "E501",    # long docstrings in tests
    "TC002",   # `from __future__ import annotations` makes TC002/TC003 noisy
    "TC003",
]
"app/exceptions/_generated/**/*.py" = [
    "E501",    # generated code may have long lines
    "I001",    # generated imports may not be sorted
    "RUF022",  # generated __all__ may not be sorted
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "slow: tests that require real heavy dependencies (Docling models, Ollama) and are excluded from the default fast check loop",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "scripts"]
