[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pdf-data-extraction"
version = "0.1.0"
description = "Backend API for the project template"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    # Docling pulls a heavy ML runtime (torch, torchvision, transformers, and
    # associated platform wheels). This is intentional: document parsing and
    # OCR are core to the service. Deployments cannot assume a slim or
    # CPU-only dependency set — plan image size and cold-start budgets
    # accordingly.
    "docling>=2.88.0,<3.0.0",
    "langextract>=1.2.1,<2.0.0",
    "pymupdf>=1.27.2.2,<2.0.0",
    # torch / torchvision are transitive via docling but we declare them as
    # direct dependencies here so the [tool.uv.sources] override below takes
    # effect (uv's sources table only rewrites direct dependencies, not
    # transitives). The extraction pipeline runs Docling + OCR on CPU; we
    # don't need the CUDA-bundled wheels. Bounded to a major range so future
    # `uv lock` runs don't silently cross a torch/torchvision major without a
    # conscious bump — matches the `<N.0.0` style used by sibling direct deps
    # above and stays within docling's own `torch<3.0.0, torchvision<1` cap.
    # See issue #139.
    "torch>=2.11,<3",
    "torchvision>=0.26,<1",
]

[project.entry-points."langextract.providers"]
ollama_gemma = "app.features.extraction.intelligence.ollama_gemma_provider:OllamaGemmaProvider"

# Pin torch / torchvision to PyTorch's CPU-only wheel index on Linux so the
# Docker image does not transitively pull ~4 GB of CUDA runtime wheels
# (nvidia-*, triton, cuda-toolkit). The extraction pipeline (Docling + OCR)
# runs on CPU; GPU support is not wired into the service. macOS (arm64) keeps
# using the default PyPI wheels because download.pytorch.org/whl/cpu does not
# publish mac wheels. See issue #139.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "ruff>=0.15.10",
    "import-linter>=2.11",
    "pyright>=1.1.408",
    "schemathesis>=4.15.1",
    "types-pyyaml>=6.0.12",
    "types-jsonschema>=4.26.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — docs not enforced at module level
    "ANN401",  # Any in **kwargs — needed for generic base classes
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # single-line implicit string concat — conflicts with formatter
    "FIX002",  # line contains TODO
    "TD003",   # missing issue link for TODO
    "UP046",   # Generic[T] syntax — TypeVar approach is clearer for complex generics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S603",    # subprocess calls with controlled argv are safe in tests
    "ANN",     # type annotations relaxed in tests
    "PLR2004", # magic values allowed in tests
    "PLC0415", # imports inside functions allowed in test fixtures
    "E501",    # long docstrings in tests
    "TC002",   # `from __future__ import annotations` makes TC002/TC003 noisy
    "TC003",
]
"app/exceptions/_generated/**/*.py" = [
    "E501",    # generated code may have long lines
    "I001",    # generated imports may not be sorted
    "RUF022",  # generated __all__ may not be sorted
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "slow: tests that require real heavy dependencies (Docling models, Ollama) and are excluded from the default fast check loop",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "scripts", "tests"]
# Pin the venv explicitly so pyright resolves imports from site-packages
# without relying on its brittle auto-detection. The repo's pre-push pyright
# hook (local hook in .pre-commit-config.yaml) invokes
# `uv run pyright app/ scripts/ tests/` from this directory; without this
# pin, pyright's own heuristic for locating a venv relative to the config
# file has proven unreliable in pre-commit contexts and fails on newly-added
# test files that import pytest/yaml with reportMissingImports.
# Both `venvPath` and `venv` are required per pyright docs: venvPath is the
# directory containing the venv, venv is the subdirectory name within it.
venvPath = "."
venv = ".venv"

# Tests are intentionally annotation-relaxed (see [tool.ruff.lint.per-file-ignores]
# "tests/**/*.py" entry that disables the ANN rule set). Pyright strict mode
# would drown them in reportMissingParameterType / reportUnknownMemberType
# errors from mocks and fixtures, which defeats the goal of catching REAL
# drift between test helpers and production signatures. Applying a relaxed
# override on the tests tree keeps the meaningful checks we care about at this
# level -- import resolution, undefined names, syntax errors, unreachable
# code -- while suppressing the strict noise. Issue #163.
#
# The structural-type suppressions below (reportArgumentType, reportAssignmentType,
# etc.) are load-bearing: test fakes often satisfy Protocols via duck typing at
# runtime but violate nominal checks pyright runs at strict level (leading
# underscore param names, MagicMock attribute access, dict-shape overrides). A
# follow-up PR can tighten the fakes; for this PR the goal is only to bring
# tests into pyright's awareness without forcing a sweep of every fake.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportUntypedFunctionDecorator = false
reportPrivateUsage = false
# Tests frequently define inner probe/counter functions that are patched over
# real dependencies via monkeypatch or Depends overrides. Pyright cannot see
# the indirect call site and flags them as unused.
reportUnusedFunction = false
# Structural-type checks: Protocol-based test fakes routinely use leading
# underscore on unused params, attribute access on MagicMock, and narrowed
# Literal types via plain strings. These surface at strict level as argument/
# assignment/return/attribute/operator/call issues that are not real drift.
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportReturnType = false
reportOperatorIssue = false
reportInvalidTypeForm = false
reportUnnecessaryComparison = false
